[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vizion"
version = "0.2.0"
description = "Python SDK for Vizion.fast — real-time GPU segmentation over WebSocket"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Vizion" }]
keywords = ["computer-vision", "segmentation", "sam3", "websocket", "gpu"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "websockets>=13.0",
    "requests>=2.28",
    "pydantic>=2.0",
]

[project.optional-dependencies]
cv = ["opencv-python>=4.8", "numpy>=1.24"]

[project.urls]
Homepage = "https://www.vizion.fast"
Documentation = "https://www.vizion.fast/docs"
